# jefraudai

./: .env  .env.secrets.example  .gitignore  README.md  deliverable.md  infra_video_script.md  pyproject.toml
.github/scripts/: config.yaml  hf_config.py  hf_create_spaces.py  hf_push_services.py  hf_update_secrets.py
.github/scripts/secrets/: secrets.example.json  setup_secrets.bat
.github/workflows/: hf_create_spaces.yaml  hf_push_services.yaml  hf_update_secrets.yaml
Services/.ignored/ClickHouse/: Dockerfile  README.md
Services/.ignored/Gradio/: README.md
Services/.ignored/JupyterLab/: Dockerfile  README.md  start_server.sh
Services/.ignored/Node-RED/: Dockerfile  README.md
Services/.ignored/Streamlit/: Dockerfile  README.md  requirements.txt
Services/.ignored/n8n/: Dockerfile  README.md
Services/FastApi/: README.md
Services/Producer/: Dockerfile  README.md  producer.py
Services/consumer/: Dockerfile  consumer.py  requirements-internal.txt  requirements.txt
Services/docsify/: Dockerfile  README.md
Services/docsify/docs/: README.md  _sidebar.md  api.md  architecture.md  configuration.md  data.md  deployment.md  index.html  index.md  overview.md  pipeline.md  schema.md
Services/slidev/: package-lock.json  package.json  slides.md  slides_v1.md
docs/: access.md
infra/: README.md
notebooks/: README.md  exploration.ipynb
notebooks/outputs/: evidently_report.html
scripts/: test_consumer.py  test_producer.py
src/configs/: config.yaml
src/fraud_detection/: configuration.py
src/resend_client/: __init__.py
(+46 files in other folders)
