[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fraud_detection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "scikit-learn",
    "autogluon.tabular",
    "autogluon.common",
    "mlflow",
    "python-dotenv",
    "ipykernel"
]
[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages]
find = { where = ["src"], include = ["fraud_detection*"] }

[project.optional-dependencies]
dev = [
    "ipykernel"
]
[dependency-groups]
dev = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "jupyterlab (>=4.5.7,<5.0.0)"
]
